chore(v3): migrate graph-connector-bot to V3 (#669)
* chore(v3): create from bot-sso sample

* chore(v3): rename

* chore(v3): copy original bot code

* chore(v3): package.json

* chore(v3): rename to aad.manifest.json

* chore(v3): manifest

* chore(v3): use config.ts and update key of process.env

* chore(v3): update @azure/msal-node version

* chore(v3): readme

* chore(v3): resolve comments

--- a/graph-connector-bot/.gitignore
+++ b/graph-connector-bot/.gitignore
@@ -1,13 +1,15 @@
-node_modules
-.backup
-.fx/configs/localSettings.json
-.fx/states/*.userdata
-.DS_Store
-.archive
-.archive.log
-.env.teamsfx.local
-subscriptionInfo.json
-.fx/configs/config.local.json
-.fx/states/state.local.json
+# TeamsFx files
+env/.env.*
+.localSettings
 build
-.backup
+
+# dependencies
+node_modules/
+
+# misc
+.env
+.deployment
+.DS_Store
+
+# build
+lib/
