--- a/graph-connector-bot/package.json
+++ b/graph-connector-bot/package.json
@@ -1,13 +1,45 @@
 {
-    "name": "graph-connector-bot",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
-    },
-    "license": "MIT"
+  "name": "graph-connector-bot",
+  "version": "1.0.0",
+  "description": "Microsoft Teams Toolkit graph-connector-bot sample",
+  "author": "Microsoft",
+  "license": "MIT",
+  "main": "./lib/index.js",
+  "scripts": {
+    "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
+    "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
+    "build": "tsc --build && shx cp -r ./adaptiveCards ./lib/",
+    "start": "node ./lib/index.js",
+    "watch": "nodemon --exec \"npm run start\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com"
+  },
+  "dependencies": {
+    "@azure/msal-node": "^1.14.6",
+    "@microsoft/microsoft-graph-client": "^3.0.1",
+    "@microsoft/teamsfx": "^2.0.0",
+    "adaptive-expressions": "^4.18.0",
+    "adaptivecards-templating": "2.1.0",
+    "botbuilder": "^4.18.0",
+    "botbuilder-dialogs": "^4.18.0",
+    "csv-parse": "^5.3.0",
+    "isomorphic-fetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.4",
+    "restify": "^10.0.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^18.11.9",
+    "@types/restify": "^8.5.5",
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.7",
+    "shx": "^0.3.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
+  }
 }
