--- a/graph-toolkit-one-productivity-hub/.gitignore
+++ b/graph-toolkit-one-productivity-hub/.gitignore
@@ -1,11 +1,19 @@
 # TeamsFx files
-node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+env/.env.*
 .DS_Store
-.env.teamsfx.local
-subscriptionInfo.json
+.localSettings
 build
-.fx/configs/config.local.json
-.fx/states/state.local.json
-.backup
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+.deployment
