--- a/graph-toolkit-one-productivity-hub/.vscode/tasks.json
+++ b/graph-toolkit-one-productivity-hub/.vscode/tasks.json
@@ -7,26 +7,23 @@
         {
             "label": "Start Teams App Locally",
             "dependsOn": [
-                "Validate & install prerequisites",
-                "Install npm packages",
-                "Set up tab",
-                "Set up SSO",
-                "Build & upload Teams manifest",
-                "Start services"
+                "Validate prerequisites",
+                "Create resources",
+                "Build project",
+                "Start application"
             ],
             "dependsOrder": "sequence"
         },
         {
-            // Check if all required prerequisites are installed and will install them if not.
+            // Check all required prerequisites.
             // See https://aka.ms/teamsfx-tasks/check-prerequisites to know the details and how to customize the args.
-            "label": "Validate & install prerequisites",
+            "label": "Validate prerequisites",
             "type": "teamsfx",
             "command": "debug-check-prerequisites",
             "args": {
                 "prerequisites": [
                     "nodejs", // Validate if Node.js is installed.
                     "m365Account", // Sign-in prompt for Microsoft 365 account, then validate if the account enables the sideloading permission.
-                    "devCert", // Install localhost SSL certificate. It's used to serve the development sites over HTTPS to debug the Tab app in Teams.
                     "portOccupancy" // Validate available ports to ensure those debug ones are not occupied.
                 ],
                 "portOccupancy": [
@@ -35,59 +32,29 @@
             }
         },
         {
-            // Check if all the npm packages are installed and will install them if not.
-            // See https://aka.ms/teamsfx-npm-package-task to know the details and how to customize the args.
-            "label": "Install npm packages",
+            // Create the debug resources.
+            // See https://aka.ms/teamsfx-tasks/provision to know the details and how to customize the args.
+            "label": "Create resources",
             "type": "teamsfx",
-            "command": "debug-npm-install",
+            "command": "provision",
             "args": {
-                "projects": [
-                    {
-                        "cwd": "${workspaceFolder}/tabs",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    }
-                ]
+                "template": "${workspaceFolder}/teamsapp.local.yml",
+                "env": "local"
             }
         },
         {
-            // Prepare local launch information for Tab.
-            // See https://aka.ms/teamsfx-debug-set-up-tab-task to know the details and how to customize the args.
-            "label": "Set up tab",
+            // Build project.
+            // See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
+            "label": "Build project",
             "type": "teamsfx",
-            "command": "debug-set-up-tab",
+            "command": "deploy",
             "args": {
-                "baseUrl": "https://localhost:53000"
+                "template": "${workspaceFolder}/teamsapp.local.yml",
+                "env": "local"
             }
         },
         {
-            // Register resources and prepare local launch information for SSO functionality.
-            // See https://aka.ms/teamsfx-debug-set-up-sso-task to know the details and how to customize the args.
-            "label": "Set up SSO",
-            "type": "teamsfx",
-            "command": "debug-set-up-sso",
-            "args": {
-                //// Enter your own AAD app information if using the existing AAD app. ////
-                // "objectId": "",
-                // "clientId": "",
-                // "clientSecret": "", // use plain text or environment variable reference like ${env:CLIENT_SECRET}
-                // "accessAsUserScopeId": "
-            }
-        },
-        {
-            // Build and upload Teams manifest.
-            // See https://aka.ms/teamsfx-debug-prepare-manifest-task to know the details and how to customize the args.
-            "label": "Build & upload Teams manifest",
-            "type": "teamsfx",
-            "command": "debug-prepare-manifest",
-            "args": {
-                //// Enter your own Teams app package path if using the existing Teams manifest. ////
-                // "appPackagePath": ""
-            }
-        },
-        {
-            "label": "Start services",
+            "label": "Start application",
             "dependsOn": [
                 "Start frontend"
             ]
@@ -98,7 +65,7 @@
             "command": "npm run dev:teamsfx",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}/tabs"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": {
                 "pattern": {
