--- a/graph-toolkit-one-productivity-hub/package.json
+++ b/graph-toolkit-one-productivity-hub/package.json
@@ -7,18 +7,20 @@
     "private": true,
     "dependencies": {
         "@fluentui/react-northstar": "^0.62.0",
-        "@microsoft/mgt-element": "^2.8.0",
-        "@microsoft/mgt-react": "^2.8.0",
-        "@microsoft/mgt-teamsfx-provider": "^2.8.0",
-        "@microsoft/microsoft-graph-client": "^3.0.1",
-        "@microsoft/teams-js": "^2.7.1",
-        "@microsoft/teamsfx": "^2.2.0",
+        "@microsoft/teams-js": "^2.2.0",
+        "@microsoft/teamsfx": "^2.0.0",
         "@microsoft/teamsfx-react": "^2.0.0",
         "axios": "^0.21.1",
+        "nth-check": "^2.0.1",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^5.0.1"
+        "react-scripts": "^5.0.1",
+        "@microsoft/mgt": "^2.6.2",
+        "@microsoft/mgt-element": "^2.6.2",
+        "@microsoft/mgt-react": "^2.6.2",
+        "@microsoft/mgt-teamsfx-provider": "^2.6.2",
+        "react-csv": "^2.2.2"
     },
     "devDependencies": {
         "env-cmd": "^10.1.0"
