--- a/graph-toolkit-one-productivity-hub/package.json
+++ b/graph-toolkit-one-productivity-hub/package.json
@@ -1,16 +1,54 @@
 {
     "name": "one-productivity-hub",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "install:tabs": "cd tabs && npm install",
-        "installAll": "npm run install:tabs"
+    "version": "0.1.0",
+    "engines": {
+        "node": ">=14 <=16"
+    },
+    "private": true,
+    "dependencies": {
+        "@fluentui/react-northstar": "^0.62.0",
+        "@microsoft/teams-js": "^2.2.0",
+        "@microsoft/teamsfx": "^2.0.0",
+        "@microsoft/teamsfx-react": "^2.0.0",
+        "axios": "^0.21.1",
+        "nth-check": "^2.0.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "^5.0.1",
+        "@microsoft/mgt": "^2.6.2",
+        "@microsoft/mgt-element": "^2.6.2",
+        "@microsoft/mgt-react": "^2.6.2",
+        "@microsoft/mgt-teamsfx-provider": "^2.6.2",
+        "react-csv": "^2.2.2"
     },
     "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
+        "env-cmd": "^10.1.0"
     },
-    "license": "MIT",
-    "dependencies": {}
+    "scripts": {
+        "dev:teamsfx": "env-cmd --silent -f .localSettings npm run start",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "eject": "react-scripts eject",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "homepage": "."
 }
