--- a/NPM-search-connector-M365/package.json
+++ b/NPM-search-connector-M365/package.json
@@ -1,6 +1,9 @@
 {
   "name": "teams-messaging-extension",
   "version": "1.0.0",
+  "engines": {
+    "node": "14 || 16 || 18"
+  },
   "msteams": {
     "teamsAppId": null
   },
