--- a/graph-connector-app/api/package.json
+++ b/graph-connector-app/api/package.json
@@ -1,6 +1,9 @@
 {
     "name": "teamsfx-template-api",
     "version": "1.0.0",
+    "engines": {
+        "node": "14 || 16 || 18"
+    },
     "scripts": {
         "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
         "dev": "func start --typescript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
