--- a/todo-list-with-Azure-backend-M365/package.json
+++ b/todo-list-with-Azure-backend-M365/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "description": "",
     "author": "",
+    "engines": {
+        "node": "14 || 16 || 18"
+    },
     "scripts": {
         "install:api": "cd api && npm install",
         "install:tabs": "cd tabs && npm install",
