--- a/hello-world-teams-tab-and-outlook-addin/appPackage/manifest.json
+++ b/hello-world-teams-tab-and-outlook-addin/appPackage/manifest.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "http://zlatkom2:32080/metaos/schema/metaos.public.schema.json#",
+    "$schema": "https://raw.githubusercontent.com/OfficeDev/microsoft-teams-app-schema/preview/op/extensions/MicrosoftTeams.schema.json",
     "manifestVersion": "devPreview",
     "version": "1.0.0",
     "id": "${{TEAMS_APP_ID}}",
