--- a/hello-world-teams-tab-and-outlook-addin/package.json
+++ b/hello-world-teams-tab-and-outlook-addin/package.json
@@ -1,9 +1,12 @@
 {
-    "name": "CombinedTabAndAddin",
+    "name": "tab-and-addin",
     "version": "0.0.1",
     "author": "Contoso",
     "scripts": {
         "build:tab": "cd tab && npm run build",
+        "build:add-in": "cd add-in && npm run build",
+        "build": "npm run build:tab && npm run build:add-in",
+        "postbuild": "ncp tab/build build && ncp add-in/dist build",
         "dev:teamsfx": "env-cmd --silent -f .localSettings npm run start:tab",
         "install": "npm run install:add-in && npm run install:tab",
         "install:add-in": "cd add-in && npm install",
@@ -15,6 +18,7 @@
     "devDependencies": {
         "@microsoft/teamsfx-cli": "^1.2.3",
         "@microsoft/teamsfx-run-utils": "alpha",
-        "env-cmd": "^10.1.0"
+        "env-cmd": "^10.1.0",
+        "ncp": "^2.0.0"
     }
 }
