--- a/hello-world-teams-tab-and-outlook-addin/teamsapp.yml
+++ b/hello-world-teams-tab-and-outlook-addin/teamsapp.yml
@@ -13,7 +13,7 @@ provision:
       templates:
         - path: ./infra/azure.bicep # Relative path to this file
           parameters: ./infra/azure.parameters.json # Relative path to this file. Placeholders will be replaced with corresponding environment variable before ARM deployment.
-          deploymentName: Create-resources-for-tab # Required when deploy ARM template
+          deploymentName: Create-resources-for-tab-and-addin # Required when deploy ARM template
       bicepCliVersion: v0.9.1 # Teams Toolkit will download this bicep CLI version from github for you, will use bicep CLI in PATH if you remove this config.
     # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-actions/arm-deploy for more details on the naming conversion rule.
 
@@ -26,10 +26,13 @@ provision:
 
 # Triggered when 'teamsfx deploy' is executed
 deploy:
-  - uses: cli/runNpmCommand # Run npm command
+  - name: npmInstall
+    uses: cli/runNpmCommand # Run npm command
     with:
       args: install
-  - uses: cli/runNpmCommand # Run npm command
+
+  - name: buildTabAndAddin
+    uses: cli/runNpmCommand # Run npm command
     with:
       args: run build --if-present
   - uses: azureStorage/deploy # Deploy bits to Azure Storage Static Website
