chore(localdebug): update v5 sample to node 18

--- a/graph-connector-bot/package.json
+++ b/graph-connector-bot/package.json
@@ -4,6 +4,9 @@
   "description": "Microsoft Teams Toolkit graph-connector-bot sample",
   "author": "Microsoft",
   "license": "MIT",
+  "engines": {
+    "node": "14 || 16 || 18"
+  },
   "main": "./lib/index.js",
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
