--- a/command-bot-with-sso/package.json
+++ b/command-bot-with-sso/package.json
@@ -4,6 +4,9 @@
     "description": "Microsoft Teams Toolkit Command and Response Bot Sample",
     "author": "Microsoft",
     "license": "MIT",
+    "engines": {
+        "node": "14 || 16 || 18"
+    },
     "main": "./lib/index.js",
     "scripts": {
         "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
