--- a/deep-linking-hello-world-tab-without-sso-M365/tabs/package.json
+++ b/deep-linking-hello-world-tab-without-sso-M365/tabs/package.json
@@ -1,6 +1,9 @@
 {
   "name": "teamsfx-template-tab",
   "version": "0.1.0",
+  "engines": {
+    "node": "14 || 16 || 18"
+  },
   "private": true,
   "dependencies": {
     "@fluentui/react-northstar": "^0.60.1",
