--- a/graph-toolkit-one-productivity-hub/package.json
+++ b/graph-toolkit-one-productivity-hub/package.json
@@ -2,7 +2,7 @@
     "name": "one-productivity-hub",
     "version": "0.1.0",
     "engines": {
-        "node": ">=14 <=16"
+        "node": "14 || 16 || 18"
     },
     "private": true,
     "dependencies": {
