--- a/hello-world-bot-with-tab/tab/package.json
+++ b/hello-world-bot-with-tab/tab/package.json
@@ -2,7 +2,7 @@
     "name": "hello-world-tab",
     "version": "0.1.0",
     "engines": {
-        "node": ">=14 <=16"
+        "node": "14 || 16 || 18"
     },
     "private": true,
     "dependencies": {
