--- a/share-now/bot/package.json
+++ b/share-now/bot/package.json
@@ -5,6 +5,9 @@
     "author": "Microsoft",
     "license": "MIT",
     "main": "./lib/index.js",
+    "engines": {
+        "node": "14 || 16 || 18"
+    },
     "scripts": {
         "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
         "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
