--- a/todo-list-with-Azure-backend/api/package.json
+++ b/todo-list-with-Azure-backend/api/package.json
@@ -2,6 +2,9 @@
   "name": "todo-sample-react-tab-sql-api",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "14 || 16 || 18"
+  },
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
     "dev": "func start --javascript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
