--- a/todo-list-with-Azure-backend/package.json
+++ b/todo-list-with-Azure-backend/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "description": "",
     "author": "",
+    "engines": {
+        "node": "14 || 16 || 18"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
