chore(v3): use m365Title/acquire in m365 sampels
- add m365Title/acquire action to yml template
- remove "Install app in Teams" task
- remove manual steps of installing app in Teams in README

--- a/NPM-search-connector-M365/.vscode/launch.json
+++ b/NPM-search-connector-M365/.vscode/launch.json
@@ -147,7 +147,7 @@
                 "Launch Bot in Outlook (Edge)",
                 "Attach to Bot"
             ],
-            "preLaunchTask": "Start Teams App Locally & Install App",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "group 2: Outlook",
                 "order": 1
@@ -160,7 +160,7 @@
                 "Launch Bot in Outlook (Chrome)",
                 "Attach to Bot"
             ],
-            "preLaunchTask": "Start Teams App Locally & Install App",
+            "preLaunchTask": "Start Teams App Locally",
             "presentation": {
                 "group": "group 2: Outlook",
                 "order": 2
