--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -31,3 +31,4 @@
 /team-central-dashboard @huimiu
 /todo-list-with-Azure-backend @adashen
 /todo-list-with-Azure-backend-M365 @kimizhu
+/.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
