--- a/team-central-dashboard/.vscode/tasks.json
+++ b/team-central-dashboard/.vscode/tasks.json
@@ -8,8 +8,8 @@
             "label": "Start Teams App Locally",
             "dependsOn": [
                 "Validate & install prerequisites",
-                "Provision",
-                "Deploy",
+                "Create resources",
+                "Build project",
                 "Start application"
             ],
             "dependsOrder": "sequence"
@@ -36,20 +36,22 @@
         {
             // Create the debug resources.
             // See https://aka.ms/teamsfx-tasks/provision to know the details and how to customize the args.
-            "label": "Provision",
+            "label": "Create resources",
             "type": "teamsfx",
             "command": "provision",
             "args": {
+                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
         {
             // Build project.
             // See See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
-            "label": "Deploy",
+            "label": "Build project",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
+                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
