--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,7 +9,7 @@
 # In each subsection folders are ordered first by depth, then alphabetically.
 # This should make it easy to add new rules without breaking existing ones.
 
-/NPM-search-connector-M365 @kimizhu @XiaofuHuang
+/NPM-search-connector-M365 @kimizhu @kuojianlu
 /adaptive-card-notification @kimizhu @XiaofuHuang
 /bot-sso @eriolchan @yukun-dong
 /command-bot-with-sso @adashen @SLdragon
