chore: add sample owner for developer-assist-dashboard

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -31,4 +31,5 @@
 /team-central-dashboard @eriolchan @huimiu
 /todo-list-with-Azure-backend @adashen @formulahendry
 /todo-list-with-Azure-backend-M365 @kimizhu @kuojianlu
+/developer-assist-dashboard @MSFT-yiz @HuihuiWu-Microsoft
 /.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
