fix(v3): install dotnet for todo-list

--- a/todo-list-with-Azure-backend/teamsapp.local.yml
+++ b/todo-list-with-Azure-backend/teamsapp.local.yml
@@ -54,7 +54,7 @@ deploy:
       devCert:
         trust: true
       func: true
-      # dotnet: true 
+      dotnet: true 
     # Output: following environment variable will be persisted in current environment's .env file.
     # SSL_CRT_FILE: certificate file
     # SSL_KEY_FILE: certificate key
