fix: fix bot no auth in ME SSO

--- a/query-org-user-with-message-extension-sso/appPackage/manifest.json
+++ b/query-org-user-with-message-extension-sso/appPackage/manifest.json
@@ -113,5 +113,9 @@
     ],
     "validDomains": [
         "${{BOT_DOMAIN}}"
-    ]
+    ],
+    "webApplicationInfo": {
+        "id": "${{AAD_APP_CLIENT_ID}}",
+        "resource": "api://botid-${{BOT_ID}}"
+    }
 }
