chore: update yml and .env for sharenow

--- a/share-now/env/.env.dev
+++ b/share-now/env/.env.dev
@@ -1,3 +1,5 @@
+# This file includes environment variables that will be committed to git by default.
+
 # Built-in environment variables
 TEAMSFX_ENV=dev
 
@@ -13,7 +15,6 @@ RESOURCE_SUFFIX=
 # Generated during provision, you can also add your own variables.
 TEAMS_APP_ID=
 AAD_APP_CLIENT_ID=
-SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
 AAD_APP_TENANT_ID=
 AAD_APP_OAUTH_AUTHORITY_HOST=
@@ -24,7 +25,6 @@ TAB_ENDPOINT=
 TAB_DOMAIN=
 BOT_DOMAIN=
 BOT_ID=
-SECRET_BOT_PASSWORD=
 BOT_AZURE_APP_SERVICE_RESOURCE_ID=
 FUNCTION_ENDPOINT=
 FUNCTION_RESOURCE_ID=
