--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -31,7 +31,7 @@ configureApp:
     with:
       manifestPath: "./aad.manifest.json"
       outputFilePath : ./build/aad.manifest.${{TEAMSFX_ENV}}.json
-  - uses: teamsApp/validate
+  - uses: teamsApp/validateManifest # Validate using manifest schema
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
