--- a/adaptive-card-notification/teamsapp.yml
+++ b/adaptive-card-notification/teamsapp.yml
@@ -56,7 +56,7 @@ deploy:
       resourceId: ${{BOT_AZURE_FUNCTION_APP_RESOURCE_ID}}
 
 publish:
-  - uses: teamsApp/validateManifest # Validate using manifest schema
+  - uses: teamsApp/validate
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
   - uses: teamsApp/zipAppPackage
