--- a/hello-world-in-meeting/teamsapp.local.yml
+++ b/hello-world-in-meeting/teamsapp.local.yml
@@ -15,7 +15,7 @@ configureApp:
       envs:
         TAB_DOMAIN: localhost:53000
         TAB_ENDPOINT: https://localhost:53000
-  - uses: teamsApp/validateManifest # Validate using manifest schema
+  - uses: teamsApp/validate
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
