--- a/todo-list-SPFx/teamsapp.local.yml
+++ b/todo-list-SPFx/teamsapp.local.yml
@@ -10,7 +10,7 @@ registerApp:
     # TEAMS_APP_ID: the id of Teams app
 
 configureApp:
-  - uses: teamsApp/validateManifest # Validate using manifest schema
+  - uses: teamsApp/validate
     with:
       manifestPath: ./appPackage/manifest.local.json # Path to manifest template
 
