--- a/graph-toolkit-contact-exporter/env/.env.local
+++ b/graph-toolkit-contact-exporter/env/.env.local
@@ -5,6 +5,7 @@ TEAMSFX_ENV=local
 TAB_DOMAIN=
 TAB_ENDPOINT=
 TEAMS_APP_ID=
+TEAMS_APP_TENANT_ID=
 AAD_APP_CLIENT_ID=
 AAD_APP_OBJECT_ID=
 AAD_APP_TENANT_ID=
