--- a/share-now/env/.env.local
+++ b/share-now/env/.env.local
@@ -1,18 +1,17 @@
+# This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
+
 # Built-in environment variables
 TEAMSFX_ENV=local
 
 # SQL Azure environment variables
 SQL_ENDPOINT=
 SQL_DATABASE_NAME=
-SQL_USER_NAME=
-SQL_PASSWORD=
 
-# Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
+# Generated during provision, you can also add your own variables.
 TAB_DOMAIN=
 TAB_ENDPOINT=
 TEAMS_APP_ID=
 AAD_APP_CLIENT_ID=
-SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
 AAD_APP_TENANT_ID=
 AAD_APP_OAUTH_AUTHORITY=
@@ -21,8 +20,7 @@ AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
 BOT_DOMAIN=
 BOT_ENDPOINT=
 BOT_ID=
-SECRET_BOT_PASSWORD=
 
-# Generated during deploy, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
+# Generated during deploy, you can also add your own variables.
 SSL_CRT_FILE=
 SSL_KEY_FILE=
