chore: split .env file and merge provision for local (#736)
* chore: split .env file and merge provision in teamsapp.local.yml

* chore: add TEAMS_APP_TENANT_ID to .env file

* chore: split .env file and merge provision for command-bot-with-sso

* chore: split .env file and merge provision for  graph-toolkit-one-productivity-hub

* chore: add TEAMS_APP_TENANT_ID to env

* chore: add comment for .env.local file

* chore: update comments in yml file

---------

Co-authored-by: turenlong <rentu@microsoft.com>

--- a/graph-toolkit-contact-exporter/env/.env.local
+++ b/graph-toolkit-contact-exporter/env/.env.local
@@ -1,3 +1,5 @@
+# This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
+
 # Built-in environment variables
 TEAMSFX_ENV=local
 
@@ -5,8 +7,8 @@ TEAMSFX_ENV=local
 TAB_DOMAIN=
 TAB_ENDPOINT=
 TEAMS_APP_ID=
+TEAMS_APP_TENANT_ID=
 AAD_APP_CLIENT_ID=
-SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
 AAD_APP_TENANT_ID=
 AAD_APP_OAUTH_AUTHORITY=
