--- a/graph-toolkit-contact-exporter/env/.env.dev
+++ b/graph-toolkit-contact-exporter/env/.env.dev
@@ -1,3 +1,5 @@
+# This file includes environment variables that will be committed to git by default.
+
 # Built-in environment variables
 TEAMSFX_ENV=dev
 
@@ -8,8 +10,8 @@ RESOURCE_SUFFIX=
 
 # Generated during provision, you can also add your own variables.
 TEAMS_APP_ID=
+TEAMS_APP_TENANT_ID=
 AAD_APP_CLIENT_ID=
-SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
 AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
 AAD_APP_TENANT_ID=
