--- a/graph-toolkit-one-productivity-hub/teamsapp.yml
+++ b/graph-toolkit-one-productivity-hub/teamsapp.yml
@@ -49,7 +49,7 @@ provision:
     # Output: the following environment variable(s) will be persisted in the current environment's .env file.
     # AAD_APP_ACCESS_AS_USER_PERMISSION_ID: the id of access_as_user permission which is used to enable SSO
 
-  - uses: teamsApp/validate # This action is currently skipped, will be updated in the future version.
+  - uses: teamsApp/validateManifest # Validate using manifest schemaManifest # Validate using manifest schema
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
   - uses: teamsApp/zipAppPackage # Build Teams app package with the latest env value
@@ -81,7 +81,7 @@ deploy:
 
 # Triggered when 'teamsfx publish' is executed
 publish:
-  - uses: teamsApp/validate # This action is currently skipped, will be updated in the future version.
+  - uses: teamsApp/validateManifest # Validate using manifest schemaManifest # Validate using manifest schema
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
   - uses: teamsApp/zipAppPackage
