chore: update yml and .env for graph-connector app

--- a/graph-connector-app/env/.env.dev
+++ b/graph-connector-app/env/.env.dev
@@ -1,3 +1,5 @@
+# This file includes environment variables that will be committed to git by default.
+
 # Built-in environment variables
 TEAMSFX_ENV=dev
 # Updating AZURE_SUBSCRIPTION_ID or AZURE_RESOURCE_GROUP_NAME after provision may also require an update to RESOURCE_SUFFIX, because some services require a globally unique name across subscriptions/resource groups.
@@ -9,7 +11,6 @@ RESOURCE_SUFFIX=
 TEAMS_APP_ID=
 TEAMS_APP_TENANT_ID=
 AAD_APP_CLIENT_ID=
-SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
 AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
 AAD_APP_TENANT_ID=
