--- a/graph-connector-app/env/.env.local
+++ b/graph-connector-app/env/.env.local
@@ -1,3 +1,5 @@
+# This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
+
 # Built-in environment variables
 TEAMSFX_ENV=local
 
@@ -7,7 +9,6 @@ TAB_ENDPOINT=
 TEAMS_APP_ID=
 TEAMS_APP_TENANT_ID=
 AAD_APP_CLIENT_ID=
-SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
 AAD_APP_TENANT_ID=
 AAD_APP_OAUTH_AUTHORITY=
