--- a/graph-connector-app/teamsapp.local.yml
+++ b/graph-connector-app/teamsapp.local.yml
@@ -1,6 +1,6 @@
 version: 1.0.0
 
-registerApp:
+provision:
   - uses: aadApp/create # Creates a new AAD app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
     with:
       name: graph-connector-app-aad # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is same with the name defined here.
@@ -19,7 +19,6 @@ registerApp:
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
-configureApp:
   - uses: file/updateEnv # Generate env to .env file
     with:
       envs:
