--- a/graph-connector-app/teamsapp.local.yml
+++ b/graph-connector-app/teamsapp.local.yml
@@ -20,12 +20,18 @@ registerApp:
     # TEAMS_APP_ID: the id of Teams app
 
 configureApp:
-  - uses: file/updateEnv # Generate env to .env file
+  - uses: script # Set TAB_DOMAIN for local launch
+    name: Set TAB_DOMAIN for local launch
     with:
-      envs:
-        TAB_DOMAIN: localhost:53000
-        TAB_ENDPOINT: https://localhost:53000
-        FUNC_ENDPOINT: http://localhost:7071
+      run: echo "::set-output TAB_DOMAIN=localhost:53000"
+  - uses: script # Set TAB_ENDPOINT for local launch
+    name: Set TAB_ENDPOINT for local launch
+    with:
+      run: echo "::set-output TAB_ENDPOINT=https://localhost:53000"
+  - uses: script # Set FUNC_ENDPOINT for local launch
+    name: Set FUNC_ENDPOINT for local launch
+    with:
+      run: echo "::set-output FUNC_ENDPOINT=http://localhost:7071"
 
   - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
     with:
@@ -67,7 +73,7 @@ deploy:
       args: install --no-audit
       workingDirectory: api
 
-  - uses: file/updateEnv # Generate runtime environment variables for tab
+  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for tab
     with:
       target: ./tabs/.localSettings
       envs:
@@ -81,7 +87,7 @@ deploy:
         REACT_APP_FUNC_NAME: data
         REACT_APP_FUNC_ENDPOINT: ${{FUNC_ENDPOINT}}
 
-  - uses: file/updateEnv # Generate runtime environment variables for backend
+  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for backend
     with:
       target: ./api/.localSettings
       envs:
