--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -19,13 +19,22 @@ registerApp:
     # TEAMS_APP_ID: the id of Teams app  
 
 configureApp:
-  - uses: file/updateEnv # Generate env to .env file
+  - uses: script # Set TAB_DOMAIN for local launch
+    name: Set TAB_DOMAIN for local launch
     with:
-      envs:
-        TAB_DOMAIN: localhost:53000
-        TAB_ENDPOINT: https://localhost:53000
-        FUNC_NAME: finishTaskNotification
-        FUNC_ENDPOINT: http://localhost:7071
+      run: echo "::set-output TAB_DOMAIN=localhost:53000"
+  - uses: script # Set TAB_ENDPOINT for local launch
+    name: Set TAB_ENDPOINT for local launch
+    with:
+      run: echo "::set-output TAB_ENDPOINT=https://localhost:53000"
+  - uses: script # Set FUNC_NAME for local launch
+    name: Set FUNC_NAME for local launch
+    with:
+      run: echo "::set-output FUNC_NAME=finishTaskNotification"
+  - uses: script # Set FUNC_ENDPOINT for local launch
+    name: Set FUNC_ENDPOINT for local launch
+    with:
+      run: echo "::set-output FUNC_ENDPOINT=http://localhost:7071"
         
   - uses: aadApp/update
     with:
@@ -71,7 +80,7 @@ deploy:
       workingDirectory: ./api
       execPath: ${{DOTNET_PATH}}
 
-  - uses: file/updateEnv # Generate runtime environment variables for tab
+  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for tab
     with:
       target: ./.localSettings
       envs:
@@ -86,7 +95,7 @@ deploy:
         REACT_APP_FUNC_NAME: ${{FUNC_NAME}}
         REACT_APP_FUNC_ENDPOINT: ${{FUNC_ENDPOINT}}
 
-  - uses: file/updateEnv # Generate runtime environment variables for backend
+  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for backend
     with:
       target: ./api/.localSettings
       envs:
