--- a/todo-list-with-Azure-backend/teamsapp.local.yml
+++ b/todo-list-with-Azure-backend/teamsapp.local.yml
@@ -20,11 +20,14 @@ registerApp:
     # TEAMS_APP_ID: the id of Teams app
 
 configureApp:
-  - uses: file/updateEnv # Generate env to .env file
+  - uses: script # Set TAB_DOMAIN for local launch
+    name: Set TAB_DOMAIN for local launch
     with:
-      envs:
-        TAB_DOMAIN: localhost:53000
-        TAB_ENDPOINT: https://localhost:53000
+      run: echo "::set-output TAB_DOMAIN=localhost:53000"
+  - uses: script # Set TAB_ENDPOINT for local launch
+    name: Set TAB_ENDPOINT for local launch
+    with:
+      run: echo "::set-output TAB_ENDPOINT=https://localhost:53000"
 
   - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
     with:
@@ -70,7 +73,7 @@ deploy:
       workingDirectory: ./api
       execPath: ${{DOTNET_PATH}}
 
-  - uses: file/updateEnv # Generate runtime environment variables for tab
+  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for tab
     with:
       target: ./tabs/.localSettings
       envs:
@@ -84,7 +87,7 @@ deploy:
         REACT_APP_FUNC_ENDPOINT: http://localhost:7071
         REACT_APP_FUNC_NAME: getUserProfile
 
-  - uses: file/updateEnv # Generate runtime environment variables for backend
+  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for backend
     with:
       target: ./api/.localSettings
       envs:
