chore: merge registerApp/configureApp and update ignore file for env

--- a/todo-list-SPFx/teamsapp.local.yml
+++ b/todo-list-SPFx/teamsapp.local.yml
@@ -2,14 +2,13 @@ version: 1.0.0
 
 environmentFolderPath: ./env 
 
-registerApp:
+provision:
   - uses: teamsApp/create # Creates a Teams app
     with:
       name: TodoListSPFx-local # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
-configureApp:
   - uses: teamsApp/validateManifest # Validate using manifest schema
     with:
       manifestPath: ./appPackage/manifest.local.json # Path to manifest template
