--- a/todo-list-SPFx/teamsapp.yml
+++ b/todo-list-SPFx/teamsapp.yml
@@ -21,14 +21,13 @@ deploy:
       packageSolutionPath: ./src/config/package-solution.json
 
 
-registerApp:
+provision:
   - uses: teamsApp/create # Creates a Teams app
     with:
       name: TodoListSPFx-${{TEAMSFX_ENV}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
-configureApp:
   - uses: teamsApp/validateManifest # Validate using manifest schema
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
