--- a/hello-world-in-meeting/.gitignore
+++ b/hello-world-in-meeting/.gitignore
@@ -1,5 +1,6 @@
 # TeamsFx files
-env/.env.*
+env/.env.*.user
+env/.env.local
 .DS_Store
 .localSettings
 build
@@ -14,6 +15,5 @@ build
 /build
 
 # misc
-.DS_Store
 .env
 .deployment
