--- a/hello-world-tab-with-backend/.gitignore
+++ b/hello-world-tab-with-backend/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # TeamsFx files
-env/.env.*
+env/.env.*.user
+env/.env.local
 .DS_Store
 build
 .deployment
