--- a/hello-world-tab-with-backend/env/.env.dev
+++ b/hello-world-tab-with-backend/env/.env.dev
@@ -1,3 +1,5 @@
+# This file includes environment variables that will be committed to git by default.
+
 # Built-in environment variables
 TEAMSFX_ENV=dev
 TEAMS_APP_NAME=Hello_World_Tab_with_Backend
@@ -10,7 +12,6 @@ RESOURCE_SUFFIX=
 TEAMS_APP_ID=
 TEAMS_APP_TENANT_ID=
 AAD_APP_CLIENT_ID=
-SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
 AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
 AAD_APP_TENANT_ID=
