--- a/hello-world-tab-with-backend/env/.env.local
+++ b/hello-world-tab-with-backend/env/.env.local
@@ -1,3 +1,5 @@
+# This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
+
 # Built-in environment variables
 TEAMSFX_ENV=local
 TEAMS_APP_NAME=Hello_World_Tab_with_Backend
@@ -8,7 +10,6 @@ TAB_ENDPOINT=
 TEAMS_APP_ID=
 TEAMS_APP_TENANT_ID=
 AAD_APP_CLIENT_ID=
-SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
 AAD_APP_TENANT_ID=
 AAD_APP_OAUTH_AUTHORITY=
