--- a/team-central-dashboard/env/.env.dev
+++ b/team-central-dashboard/env/.env.dev
@@ -1,3 +1,5 @@
+# This file includes environment variables that will be committed to git by default.
+
 # Built-in environment variables
 TEAMSFX_ENV=dev
 
@@ -20,6 +22,3 @@ TAB_ENDPOINT=
 API_FUNCTION_ENDPOINT=
 API_FUNCTION_RESOURCE_ID=
 DOTNET_PATH=
-
-# Secrets. Keys prefixed with `SECRET_` will be masked in Teams Toolkit logs.
-SECRET_AAD_APP_CLIENT_SECRET=
