--- a/live-share-dice-roller/env/.env.local
+++ b/live-share-dice-roller/env/.env.local
@@ -3,11 +3,14 @@ TEAMSFX_ENV=local
 TEAMS_APP_NAME=hello-world-in-meeting-local
 
 # Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
-TAB_DOMAIN=
-TAB_ENDPOINT=
-TEAMS_APP_ID=
+TAB_DOMAIN=localhost:3000
+TAB_ENDPOINT=https://localhost:3000
+TEAMS_APP_ID=c577082c-7839-473a-a411-4270f2a7ca65
 TEAMS_APP_PACKAGE_PATH=
 
 # Generated during deploy, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
-SSL_CRT_FILE=
-SSL_KEY_FILE=
+SSL_CRT_FILE=C:/Users/chengchenghu/.fx/certificate/localhost.crt
+SSL_KEY_FILE=C:/Users/chengchenghu/.fx/certificate/localhost.key
+
+TEAMS_APP_TENANT_ID=1db3e43d-ea21-4e4e-b82f-42e87867b955
+TEAMS_APP_UPDATE_TIME=2023-03-24T20:20:41.9232569+00:00
