--- a/live-share-dice-roller/teamsapp.yml
+++ b/live-share-dice-roller/teamsapp.yml
@@ -36,7 +36,7 @@ deploy:
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: live-share-dic-roller-${{TEAMSFX_ENV}}
+      name: live-share-dice-roller-${{TEAMSFX_ENV}}
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
