chore: update yml and ignore file

--- a/whos-next-meeting-app/package.json
+++ b/whos-next-meeting-app/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "description": "",
     "author": "",
+    "engines": {
+        "node": "14 || 16"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "install:tabs": "cd tabs && npm install",
