--- a/whos-next-meeting-app/.gitignore
+++ b/whos-next-meeting-app/.gitignore
@@ -1,15 +1,21 @@
-node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
-.DS_Store
-.env.teamsfx.local
-.env.teamsfx.dev
-
-subscriptionInfo.json
-build
-.fx/configs/config.local.json
-.fx/states/state.local.json
-.backup
-env/.env.*.user
+# TeamsFx files
 env/.env.local
-.backup/*
+env/.env.*.user
+.DS_Store
+.localSettings
+build
+
+# dependencies
+/node_modules
+/tabs/node_modules
+/alt-tabs-azure/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.env
+.deployment
