chore: update yml and .env for devdashboard

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -28,8 +28,8 @@
 /stocks-update-notification-bot @kimizhu @dooriya @swatDong @XiaofuHuang
 /stocks-update-notification-bot-dotnet @kimizhu @dooriya @swatDong @XiaofuHuang
 /todo-list-SPFx @MSFT-yiz @HuihuiWu-Microsoft
-/team-central-dashboard @eriolchan @huimiu
+/team-central-dashboard @eriolchan @huimiu @hund030 @JerryYangKai
 /todo-list-with-Azure-backend @adashen @formulahendry
 /todo-list-with-Azure-backend-M365 @kimizhu @swatDong @kuojianlu
-/developer-assist-dashboard @MSFT-yiz @HuihuiWu-Microsoft
+/developer-assist-dashboard @eriolchan @huimiu @hund030 @JerryYangKai
 /.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
