--- a/developer-assist-dashboard/env/.env.dev
+++ b/developer-assist-dashboard/env/.env.dev
@@ -1,3 +1,5 @@
+# This file includes environment variables that will be committed to git by default.
+
 # Built-in environment variables
 TEAMSFX_ENV=dev
 
@@ -19,6 +21,3 @@ TAB_AZURE_STORAGE_RESOURCE_ID=
 TAB_ENDPOINT=
 M365_TITLE_ID=
 M365_APP_ID=
-
-# Secrets. Keys prefixed with `SECRET_` will be masked in Teams Toolkit logs.
-SECRET_AAD_APP_CLIENT_SECRET=
