--- a/developer-assist-dashboard/env/.env.local
+++ b/developer-assist-dashboard/env/.env.local
@@ -1,3 +1,5 @@
+# This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
+
 # Built-in environment variables
 TEAMSFX_ENV=local
 
@@ -20,6 +22,3 @@ M365_APP_ID=
 # Generated during deploy, you can also add your own variables.
 SSL_CRT_FILE=
 SSL_KEY_FILE=
-
-# Secrets. Keys prefixed with `SECRET_` will be masked in Teams Toolkit logs.
-SECRET_AAD_APP_CLIENT_SECRET=
