--- a/live-share-dice-roller/env/.env.dev
+++ b/live-share-dice-roller/env/.env.dev
@@ -1,6 +1,6 @@
 # Built-in environment variables
 TEAMSFX_ENV=dev
-TEAMS_APP_NAME=hello-world-in-meeting
+TEAMS_APP_NAME=live-share-dice-roller
 # Updating AZURE_SUBSCRIPTION_ID or AZURE_RESOURCE_GROUP_NAME after provision may also require an update to RESOURCE_SUFFIX, because some services require a globally unique name across subscriptions/resource groups.
 AZURE_SUBSCRIPTION_ID=
 AZURE_RESOURCE_GROUP_NAME=
@@ -10,3 +10,6 @@ RESOURCE_SUFFIX=
 TEAMS_APP_ID=
 TAB_AZURE_STORAGE_RESOURCE_ID=
 TAB_ENDPOINT=
+TEAMS_APP_TENANT_ID=
+TAB_DOMAIN=
+TEAMS_APP_UPDATE_TIME=
