--- a/live-share-dice-roller/env/.env.local
+++ b/live-share-dice-roller/env/.env.local
@@ -1,16 +1,19 @@
 # Built-in environment variables
 TEAMSFX_ENV=local
-TEAMS_APP_NAME=hello-world-in-meeting-local
+TEAMS_APP_NAME=live-share-dice-roller-local
 
 # Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
 TAB_DOMAIN=localhost:3000
 TAB_ENDPOINT=https://localhost:3000
-TEAMS_APP_ID=c577082c-7839-473a-a411-4270f2a7ca65
+TEAMS_APP_ID=
 TEAMS_APP_PACKAGE_PATH=
 
 # Generated during deploy, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
-SSL_CRT_FILE=C:/Users/chengchenghu/.fx/certificate/localhost.crt
-SSL_KEY_FILE=C:/Users/chengchenghu/.fx/certificate/localhost.key
+SSL_CRT_FILE=
+SSL_KEY_FILE=
 
-TEAMS_APP_TENANT_ID=1db3e43d-ea21-4e4e-b82f-42e87867b955
-TEAMS_APP_UPDATE_TIME=2023-03-24T20:20:41.9232569+00:00
+TEAMS_APP_TENANT_ID=
+TEAMS_APP_UPDATE_TIME=
+BOT_ENDPOINT=
+BOT_DOMAIN=
+DEV_TUNNEL_ID=
