--- a/todo-list-SPFx/teamsapp.local.yml
+++ b/todo-list-SPFx/teamsapp.local.yml
@@ -29,4 +29,4 @@ deploy:
   - uses: cli/runNpmCommand # Run npm command
     with:
       args: install --no-audit
-      workingDirectory: ./src
+      workingDirectory: src
